{{$NEXT}}

Drivers:
* NO::Conll



2.034     2015-02-10 22:27:41+01:00 Europe/Prague

Interface:
* FeatureStructure has new methods is_interrogative() and is_relative().

Features:
* New value 'dim' of the feature 'degree': diminutive. Applicable to multiple languages, systematically needed in Dutch.
* New feature 'position' for the position (usage) of Dutch adjectives.

Drivers:
* Fixed NL::Cgn. Extended list of tags; encoding now includes features.



2.033     2015-02-08 00:02:03+01:00 Europe/Prague

Interface:
* New class Lingua::Interset::Converter implements conversion between two physical tagsets including caching.

Drivers:
* NL::Conll
* NL::Cgn



2.032     2015-01-26 23:27:27+01:00 Europe/Prague

Interface:
* Fixed alphabetical ordering in FeatureStructure->get_ufeatures().

Drivers:
* Fixed MUL::Uposf. Decoding was incorrect for features that are named differently in UD and in Interset.
* SV::Mamba
* SV::Conll
* SV::Parole
* SV::Suc



2.031     2015-01-24 12:35:52+01:00 Europe/Prague

Interface:
* FeatureStructure has new method add_ufeatures() that performs the dual operation to get_ufeatures().

Features:
* New value 'gdv' of the feature 'verbform': Latin gerundive (as opposed to the gerund, verbform=ger).

Drivers:
* LA::Conll



2.030     2015-01-21 14:45:58+01:00 Europe/Prague

Features:
* New value 'light' of the feature 'verbtype': light/support verb in Japanese ("suru") and other languages.

Drivers:
* JA::Conll



2.029     2015-01-07 11:05:40+01:00 Europe/Prague

Fixes:
* Fixed several bugs in classification of numerals in Tagset::CS::Pdt.



2.028     2014-12-20 13:21:11+01:00 Europe/Prague

Drivers:
* IT::Conll



2.027     2014-12-10 22:34:10+01:00 Europe/Prague

Drivers:
* HU::Conll

Interface:
* FeatureStructure has new methods is_active() and is_passive().



2.026     2014-12-05 18:56:03+01:00 Europe/Prague

Drivers:
* HI::Conll
* DE::Smor

Interface:
* FeatureStructure has new method set_other_subfeature().


